tests/fixtures/invalid/round_set_set.py
# Cannot call round() with Set[int], Set[int]
x = round({1, 2, 3}, {1, 2, 3})
